# Copyright 2013 The ANGLE Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("../gni/angle.gni")

libangle_common_sources = [
  "$angle_root/src/common/CircularBuffer.h",
  "$angle_root/src/common/Color.h",
  "$angle_root/src/common/Color.inc",
  "$angle_root/src/common/FastVector.h",
  "$angle_root/src/common/FixedVector.h",
  "$angle_root/src/common/Float16ToFloat32.cpp",
  "$angle_root/src/common/MemoryBuffer.cpp",
  "$angle_root/src/common/MemoryBuffer.h",
  "$angle_root/src/common/Optional.h",
  "$angle_root/src/common/PackedEGLEnums_autogen.cpp",
  "$angle_root/src/common/PackedEGLEnums_autogen.h",
  "$angle_root/src/common/PackedEnums.cpp",
  "$angle_root/src/common/PackedEnums.h",
  "$angle_root/src/common/PackedGLEnums_autogen.cpp",
  "$angle_root/src/common/PackedGLEnums_autogen.h",
  "$angle_root/src/common/PoolAlloc.cpp",
  "$angle_root/src/common/PoolAlloc.h",
  "$angle_root/src/common/RingBufferAllocator.cpp",
  "$angle_root/src/common/RingBufferAllocator.h",
  "$angle_root/src/common/Spinlock.h",
  "$angle_root/src/common/SynchronizedValue.h",
  "$angle_root/src/common/WorkerThread.cpp",
  "$angle_root/src/common/WorkerThread.h",
  "$angle_root/src/common/aligned_memory.cpp",
  "$angle_root/src/common/aligned_memory.h",
  "$angle_root/src/common/android_util.cpp",
  "$angle_root/src/common/android_util.h",
  "$angle_root/src/common/angleutils.cpp",
  "$angle_root/src/common/angleutils.h",
  "$angle_root/src/common/apple_platform_utils.h",
  "$angle_root/src/common/backtrace_utils.h",
  "$angle_root/src/common/base/anglebase/base_export.h",
  "$angle_root/src/common/base/anglebase/containers/mru_cache.h",
  "$angle_root/src/common/base/anglebase/logging.h",
  "$angle_root/src/common/base/anglebase/macros.h",
  "$angle_root/src/common/base/anglebase/no_destructor.h",
  "$angle_root/src/common/base/anglebase/numerics/checked_math.h",
  "$angle_root/src/common/base/anglebase/numerics/checked_math_impl.h",
  "$angle_root/src/common/base/anglebase/numerics/clamped_math.h",
  "$angle_root/src/common/base/anglebase/numerics/clamped_math_impl.h",
  "$angle_root/src/common/base/anglebase/numerics/math_constants.h",
  "$angle_root/src/common/base/anglebase/numerics/ranges.h",
  "$angle_root/src/common/base/anglebase/numerics/safe_conversions.h",
  "$angle_root/src/common/base/anglebase/numerics/safe_conversions_arm_impl.h",
  "$angle_root/src/common/base/anglebase/numerics/safe_conversions_impl.h",
  "$angle_root/src/common/base/anglebase/numerics/safe_math.h",
  "$angle_root/src/common/base/anglebase/numerics/safe_math_arm_impl.h",
  "$angle_root/src/common/base/anglebase/numerics/safe_math_clang_gcc_impl.h",
  "$angle_root/src/common/base/anglebase/numerics/safe_math_shared_impl.h",
  "$angle_root/src/common/base/anglebase/sha1.cc",
  "$angle_root/src/common/base/anglebase/sha1.h",
  "$angle_root/src/common/base/anglebase/sys_byteorder.h",
  "$angle_root/src/common/bitset_utils.h",
  "$angle_root/src/common/debug.cpp",
  "$angle_root/src/common/debug.h",
  "$angle_root/src/common/entry_points_enum_autogen.cpp",
  "$angle_root/src/common/entry_points_enum_autogen.h",
  "$angle_root/src/common/event_tracer.cpp",
  "$angle_root/src/common/event_tracer.h",
  "$angle_root/src/common/hash_utils.h",
  "$angle_root/src/common/mathutil.cpp",
  "$angle_root/src/common/mathutil.h",
  "$angle_root/src/common/matrix_utils.cpp",
  "$angle_root/src/common/matrix_utils.h",
  "$angle_root/src/common/platform.h",
  "$angle_root/src/common/string_utils.cpp",
  "$angle_root/src/common/string_utils.h",
  "$angle_root/src/common/system_utils.cpp",
  "$angle_root/src/common/system_utils.h",
  "$angle_root/src/common/tls.cpp",
  "$angle_root/src/common/tls.h",
  "$angle_root/src/common/uniform_type_info_autogen.cpp",
  "$angle_root/src/common/utilities.cpp",
  "$angle_root/src/common/utilities.h",
  "$angle_root/src/common/vector_utils.h",
]

libangle_common_cl_sources = [
  "$angle_root/src/common/PackedCLEnums_autogen.cpp",
  "$angle_root/src/common/PackedCLEnums_autogen.h",
]

xxhash_sources = [
  "$angle_root/src/common/third_party/xxhash/xxhash.c",
  "$angle_root/src/common/third_party/xxhash/xxhash.h",
]

if (is_android && angle_enable_unwind_backtrace_support) {
  libangle_common_sources +=
      [ "$angle_root/src/common/backtrace_utils_android.cpp" ]
} else {
  libangle_common_sources +=
      [ "$angle_root/src/common/backtrace_utils_noop.cpp" ]
}

if (is_linux || is_chromeos || is_android || is_fuchsia) {
  libangle_common_sources += [
    "$angle_root/src/common/system_utils_linux.cpp",
    "$angle_root/src/common/system_utils_posix.cpp",
  ]
}

if (is_apple) {
  libangle_common_sources += [
    "$angle_root/src/common/apple/SoftLinking.h",
    "$angle_root/src/common/apple/apple_platform.h",
    "$angle_root/src/common/apple_platform_utils.mm",
    "$angle_root/src/common/gl/cgl/FunctionsCGL.cpp",
    "$angle_root/src/common/gl/cgl/FunctionsCGL.h",
    "$angle_root/src/common/system_utils_apple.cpp",
    "$angle_root/src/common/system_utils_posix.cpp",
  ]
  if (is_mac) {
    libangle_common_sources += [ "$angle_root/src/common/system_utils_mac.cpp" ]
  }
  if (is_ios) {
    libangle_common_sources += [ "$angle_root/src/common/system_utils_ios.cpp" ]
  }
}

if (is_win) {
  libangle_common_sources += [ "$angle_root/src/common/system_utils_win.cpp" ]
  if (target_os == "winuwp") {
    libangle_common_sources +=
        [ "$angle_root/src/common/system_utils_winuwp.cpp" ]
  } else {
    libangle_common_sources +=
        [ "$angle_root/src/common/system_utils_win32.cpp" ]
  }
}

libangle_image_util_headers = [
  "$angle_root/src/image_util/AstcDecompressor.h",
  "$angle_root/src/image_util/copyimage.h",
  "$angle_root/src/image_util/copyimage.inc",
  "$angle_root/src/image_util/generatemip.h",
  "$angle_root/src/image_util/generatemip.inc",
  "$angle_root/src/image_util/imageformats.h",
  "$angle_root/src/image_util/loadimage.h",
  "$angle_root/src/image_util/loadimage.inc",
]

libangle_image_util_sources = [
  "$angle_root/src/image_util/copyimage.cpp",
  "$angle_root/src/image_util/imageformats.cpp",
  "$angle_root/src/image_util/loadimage.cpp",
  "$angle_root/src/image_util/loadimage_astc.cpp",
  "$angle_root/src/image_util/loadimage_etc.cpp",
  "$angle_root/src/image_util/loadimage_paletted.cpp",
]
if (angle_has_astc_encoder) {
  libangle_image_util_sources +=
      [ "$angle_root/src/image_util/AstcDecompressor.cpp" ]
} else {
  libangle_image_util_sources +=
      [ "$angle_root/src/image_util/AstcDecompressorNoOp.cpp" ]
}

libangle_gpu_info_util_sources = [
  "$angle_root/src/gpu_info_util/SystemInfo.cpp",
  "$angle_root/src/gpu_info_util/SystemInfo.h",
  "$angle_root/src/gpu_info_util/SystemInfo_internal.h",
]

libangle_gpu_info_util_win_sources =
    [ "$angle_root/src/gpu_info_util/SystemInfo_win.cpp" ]

libangle_gpu_info_util_android_sources =
    [ "$angle_root/src/gpu_info_util/SystemInfo_android.cpp" ]

libangle_gpu_info_util_linux_sources =
    [ "$angle_root/src/gpu_info_util/SystemInfo_linux.cpp" ]

libangle_gpu_info_util_fuchsia_sources =
    [ "$angle_root/src/gpu_info_util/SystemInfo_fuchsia.cpp" ]

libangle_gpu_info_util_vulkan_sources = [
  "$angle_root/src/gpu_info_util/SystemInfo_vulkan.cpp",
  "$angle_root/src/gpu_info_util/SystemInfo_vulkan.h",
]

libangle_gpu_info_util_libpci_sources =
    [ "$angle_root/src/gpu_info_util/SystemInfo_libpci.cpp" ]

libangle_gpu_info_util_x11_sources =
    [ "$angle_root/src/gpu_info_util/SystemInfo_x11.cpp" ]

libangle_gpu_info_util_mac_sources = [
  "$angle_root/src/gpu_info_util/SystemInfo_apple.mm",
  "$angle_root/src/gpu_info_util/SystemInfo_macos.mm",
]

libangle_gpu_info_util_ios_sources = [
  "$angle_root/src/gpu_info_util/SystemInfo_apple.mm",
  "$angle_root/src/gpu_info_util/SystemInfo_ios.cpp",
]

libangle_includes = [
  "$angle_root/include/angle_gl.h",
  "$angle_root/include/export.h",
  "$angle_root/include/EGL/egl.h",
  "$angle_root/include/EGL/eglext.h",
  "$angle_root/include/EGL/eglext_angle.h",
  "$angle_root/include/EGL/eglplatform.h",
  "$angle_root/include/GLES/gl.h",
  "$angle_root/include/GLES/glplatform.h",
  "$angle_root/include/GLES/glext.h",
  "$angle_root/include/GLES2/gl2.h",
  "$angle_root/include/GLES2/gl2ext.h",
  "$angle_root/include/GLES2/gl2ext_angle.h",
  "$angle_root/include/GLES2/gl2platform.h",
  "$angle_root/include/GLES3/gl3.h",
  "$angle_root/include/GLES3/gl3platform.h",
  "$angle_root/include/GLES3/gl31.h",
  "$angle_root/include/GLES3/gl32.h",
  "$angle_root/include/GLX/glxext.h",
  "$angle_root/include/KHR/khrplatform.h",
  "$angle_root/include/WGL/wgl.h",
  "$angle_root/include/platform/Feature.h",
  "$angle_root/include/platform/FeaturesD3D_autogen.h",
  "$angle_root/include/platform/FeaturesGL_autogen.h",
  "$angle_root/include/platform/FeaturesMtl_autogen.h",
  "$angle_root/include/platform/FeaturesVk_autogen.h",
  "$angle_root/include/platform/FrontendFeatures_autogen.h",
  "$angle_root/include/platform/PlatformMethods.h",
  "$angle_root/include/vulkan/vulkan_fuchsia_ext.h",
]

libangle_headers = [
  "$angle_root/src/libANGLE/AttributeMap.h",
  "$angle_root/src/libANGLE/BinaryStream.h",
  "$angle_root/src/libANGLE/BlobCache.h",
  "$angle_root/src/libANGLE/Buffer.h",
  "$angle_root/src/libANGLE/Caps.h",
  "$angle_root/src/libANGLE/Compiler.h",
  "$angle_root/src/libANGLE/Config.h",
  "$angle_root/src/libANGLE/Constants.h",
  "$angle_root/src/libANGLE/Context.h",
  "$angle_root/src/libANGLE/Context.inl.h",
  "$angle_root/src/libANGLE/Context_gl_1_autogen.h",
  "$angle_root/src/libANGLE/Context_gl_2_autogen.h",
  "$angle_root/src/libANGLE/Context_gl_3_autogen.h",
  "$angle_root/src/libANGLE/Context_gl_4_autogen.h",
  "$angle_root/src/libANGLE/Context_gles_1_0_autogen.h",
  "$angle_root/src/libANGLE/Context_gles_2_0_autogen.h",
  "$angle_root/src/libANGLE/Context_gles_3_0_autogen.h",
  "$angle_root/src/libANGLE/Context_gles_3_1_autogen.h",
  "$angle_root/src/libANGLE/Context_gles_3_2_autogen.h",
  "$angle_root/src/libANGLE/Context_gles_ext_autogen.h",
  "$angle_root/src/libANGLE/Debug.h",
  "$angle_root/src/libANGLE/Device.h",
  "$angle_root/src/libANGLE/Display.h",
  "$angle_root/src/libANGLE/EGLSync.h",
  "$angle_root/src/libANGLE/Error.h",
  "$angle_root/src/libANGLE/Error.inc",
  "$angle_root/src/libANGLE/ErrorStrings.h",
  "$angle_root/src/libANGLE/Fence.h",
  "$angle_root/src/libANGLE/Framebuffer.h",
  "$angle_root/src/libANGLE/FramebufferAttachment.h",
  "$angle_root/src/libANGLE/GLES1Renderer.h",
  "$angle_root/src/libANGLE/GLES1Shaders.inc",
  "$angle_root/src/libANGLE/GLES1State.h",
  "$angle_root/src/libANGLE/HandleAllocator.h",
  "$angle_root/src/libANGLE/Image.h",
  "$angle_root/src/libANGLE/ImageIndex.h",
  "$angle_root/src/libANGLE/IndexRangeCache.h",
  "$angle_root/src/libANGLE/InfoLog.h",
  "$angle_root/src/libANGLE/LoggingAnnotator.h",
  "$angle_root/src/libANGLE/MemoryObject.h",
  "$angle_root/src/libANGLE/MemoryProgramCache.h",
  "$angle_root/src/libANGLE/MemoryShaderCache.h",
  "$angle_root/src/libANGLE/Observer.h",
  "$angle_root/src/libANGLE/Overlay.h",
  "$angle_root/src/libANGLE/OverlayWidgets.h",
  "$angle_root/src/libANGLE/Overlay_autogen.h",
  "$angle_root/src/libANGLE/Overlay_font_autogen.h",
  "$angle_root/src/libANGLE/PixelLocalStorage.h",
  "$angle_root/src/libANGLE/Program.h",
  "$angle_root/src/libANGLE/ProgramExecutable.h",
  "$angle_root/src/libANGLE/ProgramLinkedResources.h",
  "$angle_root/src/libANGLE/ProgramPipeline.h",
  "$angle_root/src/libANGLE/Query.h",
  "$angle_root/src/libANGLE/RefCountObject.h",
  "$angle_root/src/libANGLE/Renderbuffer.h",
  "$angle_root/src/libANGLE/ResourceManager.h",
  "$angle_root/src/libANGLE/ResourceMap.h",
  "$angle_root/src/libANGLE/Sampler.h",
  "$angle_root/src/libANGLE/Semaphore.h",
  "$angle_root/src/libANGLE/Shader.h",
  "$angle_root/src/libANGLE/SizedMRUCache.h",
  "$angle_root/src/libANGLE/State.h",
  "$angle_root/src/libANGLE/Stream.h",
  "$angle_root/src/libANGLE/Surface.h",
  "$angle_root/src/libANGLE/Texture.h",
  "$angle_root/src/libANGLE/Thread.h",
  "$angle_root/src/libANGLE/TransformFeedback.h",
  "$angle_root/src/libANGLE/Uniform.h",
  "$angle_root/src/libANGLE/VaryingPacking.h",
  "$angle_root/src/libANGLE/Version.h",
  "$angle_root/src/libANGLE/Version.inc",
  "$angle_root/src/libANGLE/VertexArray.h",
  "$angle_root/src/libANGLE/VertexAttribute.h",
  "$angle_root/src/libANGLE/VertexAttribute.inc",
  "$angle_root/src/libANGLE/angletypes.h",
  "$angle_root/src/libANGLE/angletypes.inc",
  "$angle_root/src/libANGLE/entry_points_utils.cpp",
  "$angle_root/src/libANGLE/entry_points_utils.h",
  "$angle_root/src/libANGLE/features.h",
  "$angle_root/src/libANGLE/formatutils.h",
  "$angle_root/src/libANGLE/gles_extensions_autogen.h",
  "$angle_root/src/libANGLE/histogram_macros.h",
  "$angle_root/src/libANGLE/queryconversions.h",
  "$angle_root/src/libANGLE/queryutils.h",
  "$angle_root/src/libANGLE/trace.h",
  "$angle_root/src/libANGLE/renderer/BufferImpl.h",
  "$angle_root/src/libANGLE/renderer/CompilerImpl.h",
  "$angle_root/src/libANGLE/renderer/ContextImpl.h",
  "$angle_root/src/libANGLE/renderer/driver_utils.h",
  "$angle_root/src/libANGLE/renderer/DeviceImpl.h",
  "$angle_root/src/libANGLE/renderer/DisplayImpl.h",
  "$angle_root/src/libANGLE/renderer/EGLImplFactory.h",
  "$angle_root/src/libANGLE/renderer/EGLReusableSync.h",
  "$angle_root/src/libANGLE/renderer/EGLSyncImpl.h",
  "$angle_root/src/libANGLE/renderer/FenceNVImpl.h",
  "$angle_root/src/libANGLE/renderer/FormatID_autogen.h",
  "$angle_root/src/libANGLE/renderer/Format.h",
  "$angle_root/src/libANGLE/renderer/FramebufferAttachmentObjectImpl.h",
  "$angle_root/src/libANGLE/renderer/FramebufferImpl.h",
  "$angle_root/src/libANGLE/renderer/GLImplFactory.h",
  "$angle_root/src/libANGLE/renderer/gl/functionsgl_enums.h",
  "$angle_root/src/libANGLE/renderer/ImageImpl.h",
  "$angle_root/src/libANGLE/renderer/MemoryObjectImpl.h",
  "$angle_root/src/libANGLE/renderer/OverlayImpl.h",
  "$angle_root/src/libANGLE/renderer/ProgramImpl.h",
  "$angle_root/src/libANGLE/renderer/ProgramPipelineImpl.h",
  "$angle_root/src/libANGLE/renderer/QueryImpl.h",
  "$angle_root/src/libANGLE/renderer/RenderbufferImpl.h",
  "$angle_root/src/libANGLE/renderer/RenderTargetCache.h",
  "$angle_root/src/libANGLE/renderer/SamplerImpl.h",
  "$angle_root/src/libANGLE/renderer/SemaphoreImpl.h",
  "$angle_root/src/libANGLE/renderer/ShaderImpl.h",
  "$angle_root/src/libANGLE/renderer/StreamProducerImpl.h",
  "$angle_root/src/libANGLE/renderer/SurfaceImpl.h",
  "$angle_root/src/libANGLE/renderer/SyncImpl.h",
  "$angle_root/src/libANGLE/renderer/TextureImpl.h",
  "$angle_root/src/libANGLE/renderer/TransformFeedbackImpl.h",
  "$angle_root/src/libANGLE/renderer/VertexArrayImpl.h",
  "$angle_root/src/libANGLE/renderer/vulkan/DisplayVk_api.h",
  "$angle_root/src/libANGLE/renderer/copyvertex.h",
  "$angle_root/src/libANGLE/renderer/copyvertex.inc.h",
  "$angle_root/src/libANGLE/renderer/load_functions_table.h",
  "$angle_root/src/libANGLE/renderer/renderer_utils.h",
  "$angle_root/src/libANGLE/renderer/serial_utils.h",
  "$angle_root/src/libANGLE/validationEGL.h",
  "$angle_root/src/libANGLE/validationEGL_autogen.h",
  "$angle_root/src/libANGLE/validationES.h",
  "$angle_root/src/libANGLE/validationES1.h",
  "$angle_root/src/libANGLE/validationES1_autogen.h",
  "$angle_root/src/libANGLE/validationES2.h",
  "$angle_root/src/libANGLE/validationES2_autogen.h",
  "$angle_root/src/libANGLE/validationES3.h",
  "$angle_root/src/libANGLE/validationES31.h",
  "$angle_root/src/libANGLE/validationES31_autogen.h",
  "$angle_root/src/libANGLE/validationES32.h",
  "$angle_root/src/libANGLE/validationES32_autogen.h",
  "$angle_root/src/libANGLE/validationES3_autogen.h",
  "$angle_root/src/libANGLE/validationESEXT.h",
  "$angle_root/src/libANGLE/validationESEXT_autogen.h",
  "$angle_root/src/libANGLE/validationGL1_autogen.h",
  "$angle_root/src/libANGLE/validationGL2_autogen.h",
  "$angle_root/src/libANGLE/validationGL3_autogen.h",
  "$angle_root/src/libANGLE/validationGL4_autogen.h",
  "$angle_root/src/common/base/anglebase/trace_event/trace_event.h",
]

libangle_sources = [
  "$angle_root/src/libANGLE/AttributeMap.cpp",
  "$angle_root/src/libANGLE/BlobCache.cpp",
  "$angle_root/src/libANGLE/Buffer.cpp",
  "$angle_root/src/libANGLE/Caps.cpp",
  "$angle_root/src/libANGLE/Compiler.cpp",
  "$angle_root/src/libANGLE/Config.cpp",
  "$angle_root/src/libANGLE/Context.cpp",
  "$angle_root/src/libANGLE/Context_gl.cpp",
  "$angle_root/src/libANGLE/Context_gles_1_0.cpp",
  "$angle_root/src/libANGLE/Debug.cpp",
  "$angle_root/src/libANGLE/Device.cpp",
  "$angle_root/src/libANGLE/Display.cpp",
  "$angle_root/src/libANGLE/EGLSync.cpp",
  "$angle_root/src/libANGLE/Error.cpp",
  "$angle_root/src/libANGLE/Fence.cpp",
  "$angle_root/src/libANGLE/Framebuffer.cpp",
  "$angle_root/src/libANGLE/FramebufferAttachment.cpp",
  "$angle_root/src/libANGLE/GLES1Renderer.cpp",
  "$angle_root/src/libANGLE/GLES1State.cpp",
  "$angle_root/src/libANGLE/HandleAllocator.cpp",
  "$angle_root/src/libANGLE/Image.cpp",
  "$angle_root/src/libANGLE/ImageIndex.cpp",
  "$angle_root/src/libANGLE/IndexRangeCache.cpp",
  "$angle_root/src/libANGLE/LoggingAnnotator.cpp",
  "$angle_root/src/libANGLE/MemoryObject.cpp",
  "$angle_root/src/libANGLE/MemoryProgramCache.cpp",
  "$angle_root/src/libANGLE/MemoryShaderCache.cpp",
  "$angle_root/src/libANGLE/Observer.cpp",
  "$angle_root/src/libANGLE/Overlay.cpp",
  "$angle_root/src/libANGLE/OverlayWidgets.cpp",
  "$angle_root/src/libANGLE/Overlay_autogen.cpp",
  "$angle_root/src/libANGLE/Overlay_font_autogen.cpp",
  "$angle_root/src/libANGLE/PixelLocalStorage.cpp",
  "$angle_root/src/libANGLE/Platform.cpp",
  "$angle_root/src/libANGLE/Program.cpp",
  "$angle_root/src/libANGLE/ProgramExecutable.cpp",
  "$angle_root/src/libANGLE/ProgramLinkedResources.cpp",
  "$angle_root/src/libANGLE/ProgramPipeline.cpp",
  "$angle_root/src/libANGLE/Query.cpp",
  "$angle_root/src/libANGLE/Renderbuffer.cpp",
  "$angle_root/src/libANGLE/ResourceManager.cpp",
  "$angle_root/src/libANGLE/Sampler.cpp",
  "$angle_root/src/libANGLE/Semaphore.cpp",
  "$angle_root/src/libANGLE/Shader.cpp",
  "$angle_root/src/libANGLE/State.cpp",
  "$angle_root/src/libANGLE/Stream.cpp",
  "$angle_root/src/libANGLE/Surface.cpp",
  "$angle_root/src/libANGLE/Texture.cpp",
  "$angle_root/src/libANGLE/Thread.cpp",
  "$angle_root/src/libANGLE/TransformFeedback.cpp",
  "$angle_root/src/libANGLE/Uniform.cpp",
  "$angle_root/src/libANGLE/VaryingPacking.cpp",
  "$angle_root/src/libANGLE/VertexArray.cpp",
  "$angle_root/src/libANGLE/VertexAttribute.cpp",
  "$angle_root/src/libANGLE/angletypes.cpp",
  "$angle_root/src/libANGLE/es3_copy_conversion_table_autogen.cpp",
  "$angle_root/src/libANGLE/format_map_autogen.cpp",
  "$angle_root/src/libANGLE/format_map_desktop.cpp",
  "$angle_root/src/libANGLE/formatutils.cpp",
  "$angle_root/src/libANGLE/gles_extensions_autogen.cpp",
  "$angle_root/src/libANGLE/queryconversions.cpp",
  "$angle_root/src/libANGLE/queryutils.cpp",
  "$angle_root/src/libANGLE/renderer/BufferImpl.cpp",
  "$angle_root/src/libANGLE/renderer/ContextImpl.cpp",
  "$angle_root/src/libANGLE/renderer/DeviceImpl.cpp",
  "$angle_root/src/libANGLE/renderer/DisplayImpl.cpp",
  "$angle_root/src/libANGLE/renderer/EGLReusableSync.cpp",
  "$angle_root/src/libANGLE/renderer/EGLSyncImpl.cpp",
  "$angle_root/src/libANGLE/renderer/Format_table_autogen.cpp",
  "$angle_root/src/libANGLE/renderer/FramebufferImpl.cpp",
  "$angle_root/src/libANGLE/renderer/ImageImpl.cpp",
  "$angle_root/src/libANGLE/renderer/ProgramImpl.cpp",
  "$angle_root/src/libANGLE/renderer/ProgramPipelineImpl.cpp",
  "$angle_root/src/libANGLE/renderer/QueryImpl.cpp",
  "$angle_root/src/libANGLE/renderer/RenderbufferImpl.cpp",
  "$angle_root/src/libANGLE/renderer/ShaderImpl.cpp",
  "$angle_root/src/libANGLE/renderer/SurfaceImpl.cpp",
  "$angle_root/src/libANGLE/renderer/TextureImpl.cpp",
  "$angle_root/src/libANGLE/renderer/TransformFeedbackImpl.cpp",
  "$angle_root/src/libANGLE/renderer/VertexArrayImpl.cpp",
  "$angle_root/src/libANGLE/renderer/driver_utils.cpp",
  "$angle_root/src/libANGLE/renderer/load_functions_table_autogen.cpp",
  "$angle_root/src/libANGLE/renderer/renderer_utils.cpp",
  "$angle_root/src/libANGLE/validationEGL.cpp",
  "$angle_root/src/libANGLE/validationES.cpp",
  "$angle_root/src/libANGLE/validationES1.cpp",
  "$angle_root/src/libANGLE/validationES2.cpp",
  "$angle_root/src/libANGLE/validationES3.cpp",
  "$angle_root/src/libANGLE/validationES31.cpp",
  "$angle_root/src/libANGLE/validationES32.cpp",
  "$angle_root/src/libANGLE/validationESEXT.cpp",
  "$angle_root/src/libANGLE/validationGL1.cpp",
  "$angle_root/src/libANGLE/validationGL2.cpp",
  "$angle_root/src/libANGLE/validationGL3.cpp",
  "$angle_root/src/libANGLE/validationGL4.cpp",
]

cl_includes = [
  "$angle_root/include/angle_cl.h",
  "$angle_root/include/export.h",
  "$angle_root/include/CL/cl.h",
  "$angle_root/include/CL/cl_d3d10.h",
  "$angle_root/include/CL/cl_d3d11.h",
  "$angle_root/include/CL/cl_dx9_media_sharing.h",
  "$angle_root/include/CL/cl_dx9_media_sharing_intel.h",
  "$angle_root/include/CL/cl_egl.h",
  "$angle_root/include/CL/cl_ext.h",
  "$angle_root/include/CL/cl_ext_intel.h",
  "$angle_root/include/CL/cl_gl.h",
  "$angle_root/include/CL/cl_gl_ext.h",
  "$angle_root/include/CL/cl_half.h",
  "$angle_root/include/CL/cl_icd.h",
  "$angle_root/include/CL/cl_layer.h",
  "$angle_root/include/CL/cl_platform.h",
  "$angle_root/include/CL/cl_va_api_media_sharing_intel.h",
  "$angle_root/include/CL/cl_version.h",
  "$angle_root/include/CL/opencl.h",
]

libangle_cl_headers = [
  "$angle_root/src/libANGLE/CLBitField.h",
  "$angle_root/src/libANGLE/CLBuffer.h",
  "$angle_root/src/libANGLE/CLCommandQueue.h",
  "$angle_root/src/libANGLE/CLContext.h",
  "$angle_root/src/libANGLE/CLDevice.h",
  "$angle_root/src/libANGLE/CLEvent.h",
  "$angle_root/src/libANGLE/CLImage.h",
  "$angle_root/src/libANGLE/CLKernel.h",
  "$angle_root/src/libANGLE/CLMemory.h",
  "$angle_root/src/libANGLE/CLObject.h",
  "$angle_root/src/libANGLE/CLPlatform.h",
  "$angle_root/src/libANGLE/CLProgram.h",
  "$angle_root/src/libANGLE/CLRefPointer.h",
  "$angle_root/src/libANGLE/CLSampler.h",
  "$angle_root/src/libANGLE/CLtypes.h",
  "$angle_root/src/libANGLE/cl_utils.h",
  "$angle_root/src/libANGLE/renderer/CLCommandQueueImpl.h",
  "$angle_root/src/libANGLE/renderer/CLContextImpl.h",
  "$angle_root/src/libANGLE/renderer/CLDeviceImpl.h",
  "$angle_root/src/libANGLE/renderer/CLEventImpl.h",
  "$angle_root/src/libANGLE/renderer/CLExtensions.h",
  "$angle_root/src/libANGLE/renderer/CLKernelImpl.h",
  "$angle_root/src/libANGLE/renderer/CLMemoryImpl.h",
  "$angle_root/src/libANGLE/renderer/CLPlatformImpl.h",
  "$angle_root/src/libANGLE/renderer/CLProgramImpl.h",
  "$angle_root/src/libANGLE/renderer/CLSamplerImpl.h",
  "$angle_root/src/libANGLE/renderer/CLtypes.h",
  "$angle_root/src/libANGLE/validationCL.h",
  "$angle_root/src/libANGLE/validationCL_autogen.h",
]

libangle_cl_sources = [
  "$angle_root/src/libANGLE/CLBuffer.cpp",
  "$angle_root/src/libANGLE/CLCommandQueue.cpp",
  "$angle_root/src/libANGLE/CLContext.cpp",
  "$angle_root/src/libANGLE/CLDevice.cpp",
  "$angle_root/src/libANGLE/CLEvent.cpp",
  "$angle_root/src/libANGLE/CLImage.cpp",
  "$angle_root/src/libANGLE/CLKernel.cpp",
  "$angle_root/src/libANGLE/CLMemory.cpp",
  "$angle_root/src/libANGLE/CLObject.cpp",
  "$angle_root/src/libANGLE/CLPlatform.cpp",
  "$angle_root/src/libANGLE/CLProgram.cpp",
  "$angle_root/src/libANGLE/CLSampler.cpp",
  "$angle_root/src/libANGLE/cl_utils.cpp",
  "$angle_root/src/libANGLE/renderer/CLCommandQueueImpl.cpp",
  "$angle_root/src/libANGLE/renderer/CLContextImpl.cpp",
  "$angle_root/src/libANGLE/renderer/CLDeviceImpl.cpp",
  "$angle_root/src/libANGLE/renderer/CLEventImpl.cpp",
  "$angle_root/src/libANGLE/renderer/CLExtensions.cpp",
  "$angle_root/src/libANGLE/renderer/CLKernelImpl.cpp",
  "$angle_root/src/libANGLE/renderer/CLMemoryImpl.cpp",
  "$angle_root/src/libANGLE/renderer/CLPlatformImpl.cpp",
  "$angle_root/src/libANGLE/renderer/CLProgramImpl.cpp",
  "$angle_root/src/libANGLE/renderer/CLSamplerImpl.cpp",
  "$angle_root/src/libANGLE/validationCL.cpp",
]

libangle_mac_sources = [
  "$angle_root/src/libANGLE/renderer/driver_utils_mac.mm",
  "$angle_root/src/libANGLE/renderer/gl/apple/DisplayApple_api.cpp",
  "$angle_root/src/libANGLE/renderer/gl/apple/DisplayApple_api.h",
]

# The frame capture headers are always visible to libANGLE.
libangle_sources += [
  "$angle_root/src/common/frame_capture_utils.h",
  "$angle_root/src/common/frame_capture_utils_autogen.h",
  "$angle_root/src/common/gl_enum_utils.h",
  "$angle_root/src/common/gl_enum_utils_autogen.h",
  "$angle_root/src/libANGLE/capture/FrameCapture.h",
  "$angle_root/src/libANGLE/capture/capture_egl_autogen.h",
  "$angle_root/src/libANGLE/capture/capture_gl_1_autogen.h",
  "$angle_root/src/libANGLE/capture/capture_gl_2_autogen.h",
  "$angle_root/src/libANGLE/capture/capture_gl_3_autogen.h",
  "$angle_root/src/libANGLE/capture/capture_gl_4_autogen.h",
  "$angle_root/src/libANGLE/capture/capture_gles_1_0_autogen.h",
  "$angle_root/src/libANGLE/capture/capture_gles_2_0_autogen.h",
  "$angle_root/src/libANGLE/capture/capture_gles_3_0_autogen.h",
  "$angle_root/src/libANGLE/capture/capture_gles_3_1_autogen.h",
  "$angle_root/src/libANGLE/capture/capture_gles_3_2_autogen.h",
  "$angle_root/src/libANGLE/capture/capture_gles_ext_autogen.h",
  "$angle_root/src/libANGLE/capture/serialize.h",
]

libangle_capture_sources = [
  "$angle_root/src/libANGLE/capture/FrameCapture.cpp",
  "$angle_root/src/libANGLE/capture/capture_egl_autogen.cpp",
  "$angle_root/src/libANGLE/capture/capture_gl_1_autogen.cpp",
  "$angle_root/src/libANGLE/capture/capture_gl_1_params.cpp",
  "$angle_root/src/libANGLE/capture/capture_gl_2_autogen.cpp",
  "$angle_root/src/libANGLE/capture/capture_gl_2_params.cpp",
  "$angle_root/src/libANGLE/capture/capture_gl_3_autogen.cpp",
  "$angle_root/src/libANGLE/capture/capture_gl_3_params.cpp",
  "$angle_root/src/libANGLE/capture/capture_gl_4_autogen.cpp",
  "$angle_root/src/libANGLE/capture/capture_gl_4_params.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_1_0_autogen.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_1_0_params.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_2_0_autogen.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_2_0_params.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_3_0_autogen.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_3_0_params.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_3_1_autogen.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_3_1_params.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_3_2_autogen.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_3_2_params.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_ext_autogen.cpp",
  "$angle_root/src/libANGLE/capture/capture_gles_ext_params.cpp",
  "$angle_root/src/libGLESv2/global_state.h",
  "$angle_root/src/third_party/ceval/ceval.h",
]

libglesv2_sources = [
  "$angle_root/src/libGLESv2/egl_ext_stubs.cpp",
  "$angle_root/src/libGLESv2/egl_ext_stubs_autogen.h",
  "$angle_root/src/libGLESv2/egl_stubs.cpp",
  "$angle_root/src/libGLESv2/egl_stubs_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_egl_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_egl_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_egl_ext_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_egl_ext_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_gles_1_0_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_gles_1_0_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_gles_2_0_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_gles_2_0_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_gles_3_0_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_gles_3_0_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_gles_3_1_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_gles_3_1_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_gles_3_2_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_gles_3_2_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_gles_ext_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_gles_ext_autogen.h",
  "$angle_root/src/libGLESv2/global_state.cpp",
  "$angle_root/src/libGLESv2/global_state.h",
  "$angle_root/src/libGLESv2/libGLESv2_autogen.cpp",
  "$angle_root/src/libGLESv2/proc_table_egl.h",
  "$angle_root/src/libGLESv2/proc_table_egl_autogen.cpp",
  "$angle_root/src/libGLESv2/resource.h",
]

libglesv2_gl_sources = [
  "$angle_root/src/libGLESv2/entry_points_gl_1_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_gl_1_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_gl_2_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_gl_2_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_gl_3_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_gl_3_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_gl_4_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_gl_4_autogen.h",
]

libglesv2_cl_sources = [
  "$angle_root/src/libGLESv2/cl_dispatch_table.cpp",
  "$angle_root/src/libGLESv2/cl_dispatch_table.h",
  "$angle_root/src/libGLESv2/cl_stubs.cpp",
  "$angle_root/src/libGLESv2/cl_stubs_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_cl_autogen.cpp",
  "$angle_root/src/libGLESv2/entry_points_cl_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_cl_utils.cpp",
  "$angle_root/src/libGLESv2/entry_points_cl_utils.h",
  "$angle_root/src/libGLESv2/proc_table_cl.h",
  "$angle_root/src/libGLESv2/proc_table_cl_autogen.cpp",
]

libglesv1_cm_sources = [
  "$angle_root/src/libGLESv1_CM/libGLESv1_CM.cpp",
  "$angle_root/src/libGLESv1_CM/resource.h",
]

if (is_win) {
  libglesv1_cm_sources += [ "$angle_root/src/libGLESv1_CM/libGLESv1_CM.rc" ]
}

libegl_sources = [
  "$angle_root/src/libEGL/egl_loader_autogen.h",
  "$angle_root/src/libEGL/libEGL_autogen.cpp",
  "$angle_root/src/libEGL/resource.h",
  "$angle_root/src/libGLESv2/entry_points_egl_autogen.h",
  "$angle_root/src/libGLESv2/entry_points_egl_ext_autogen.h",
]

angle_program_binary_version_sources = [
  libangle_capture_sources,
  libangle_common_sources,
  libangle_headers,
  libangle_includes,
  libangle_sources,
]
